Fix transition from menu to game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+EditorStartupMap=/Game/Level/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
