--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 EditorStartupMap=/Game/Level/MainMenu.MainMenu
+GameInstanceClass=/Game/Blueprints/GI_Score.GI_Score_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
